fixed button cropping issue

--- a/medhacks/accounts/static/css/style.css
+++ b/medhacks/accounts/static/css/style.css
@@ -104,7 +104,5 @@ body {
 }
 
 .profButton {
-    width: 10%;
-    margin-left: 40vw;
-    margin-right: 40vw;
+    margin-left: 35vw;
 }
